# devsync

./: .gitignore  README.md  build-distributable.bat  build-distributable.sh  devsync.py  devsync_gui.py  pyproject.toml  run-devsync-gui.bat  run-devsync-gui.sh
.github/workflows/: sync-to-upstream.yml
dist-resources/: Cara Pakai.txt
