[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devsync"
version = "0.2.0"
description = "Local CLI and modern GUI for GitHub credential profiles and Devin handoffs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography",
    "typer",
    "rich",
    "pyperclip",
    "ttkbootstrap>=1.10",
]

[project.scripts]
devsync = "devsync:app"
devsync-gui = "devsync_gui:main"

[tool.setuptools]
py-modules = ["devsync", "devsync_gui"]
